syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "ToleranceClassService";

package ToleranceClasses;

service ToleranceClasses {
	rpc LoadToleranceClasses(NoParams) returns (ListOfToleranceClasses);
	rpc InsertToleranceClassesWithHistory(InsertToleranceClassesWithHistoryRequest) returns (ListOfToleranceClasses);
	rpc UpdateToleranceClassesWithHistory(UpdateToleranceClassesWithHistoryRequest) returns (ListOfToleranceClasses);
	rpc GetToleranceClassLocationLinks(LongRequest) returns (ListOfLocationLink);	
	rpc GetToleranceClassLocationToolAssignmentLinks(LongRequest) returns (ListOfLongs);	
	rpc GetToleranceClassesFromHistoryForIds(ListOfToleranceClassFromHistoryParameter) returns (GetToleranceClassesFromHistoryForIdsResponse);
}

message ListOfToleranceClasses {
	repeated ToleranceClass toleranceClasses = 1;
} 

message ListOfToleranceClassesDiffs {
	repeated ToleranceClassDiff ToleranceClassesDiff = 1;
} 

message InsertToleranceClassesWithHistoryRequest {
	ListOfToleranceClassesDiffs toleranceClassesDiffs = 1;
	bool returnList = 2;
}

message UpdateToleranceClassesWithHistoryRequest {
	ListOfToleranceClassesDiffs toleranceClassesDiffs = 1;
}

message ToleranceClassFromHistoryParameter {
	int64 globalHistoryId = 1;
	int64 toleranceClassId = 2;
	DateTime timestamp = 3;
}

message ListOfToleranceClassFromHistoryParameter {
	repeated ToleranceClassFromHistoryParameter parameters = 1;
} 

message GetToleranceClassesFromHistoryForIdsResponse {
	repeated GlobalHistoryIdToleranceClassPair datas = 1;
}

message GlobalHistoryIdToleranceClassPair {
	int64 globalHistoryId = 1;
	ToleranceClass toleranceClass = 2;
}